--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   },
   "devDependencies": {
     "@commitlint/cli": "~16.1.0",
-    "@commitlint/config-conventional": "~16.0.0"
-  }
+    "@commitlint/config-conventional": "~16.0.0",
+    "prettier": "~2.6.1"
+  },
+  "packageManager": "yarn@3.2.0"
 }
