chore(books): last 79 changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "timeframe",
     "tokenomics",
     "ultimaker",
+    "wyckoff",
     "xdecow"
   ],
   "workbench.colorTheme": "One Dark Pro"
