chore(books): last 86 changes

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "shuworks.vscode-table-formatter",
     "zhuangtongfa.Material-theme",
     "streetsidesoftware.code-spell-checker",
-    "EditorConfig.EditorConfig"
+    "EditorConfig.EditorConfig",
+    "redhat.vscode-yaml"
   ]
 }
