chore(books): last 90 changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
   "cSpell.words": [
     "altcoin",
     "creality",
+    "Doctave",
     "mkdir",
     "nestjs",
     "prusaslicer",
     "retracement",
+    "Runbooks",
     "timeframe",
     "tokenomics",
     "ultimaker",
