chore(books): last 41 changes

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
   "recommendations": [
-    "ms-python.vscode-pylance"
+    "EditorConfig.EditorConfig",
+    "esbenp.prettier-vscode",
+    "alefragnani.project-manager"
   ]
 }
