--- a/lago/docker-stack/.env
+++ b/lago/docker-stack/.env
@@ -9,13 +9,13 @@ DATABASE_URL=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB
 REDIS_PASSWORD=
 REDIS_URL=redis://redis:6379
 
-LAGO_API_URL=http://localhost:3000
+LAGO_API_URL=http://100.113.17.49:3000
 LAGO_DISABLE_SEGMENT=
 LAGO_DISABLE_SIGNUP=false
-LAGO_ENCRYPTION_DETERMINISTIC_KEY=your-encrpytion-deterministic-key
-LAGO_ENCRYPTION_KEY_DERIVATION_SALT=your-encrpytion-derivation-salt
-LAGO_ENCRYPTION_PRIMARY_KEY=your-encrpytion-primary-key
-LAGO_FRONT_URL=http://localhost:8080
+LAGO_ENCRYPTION_DETERMINISTIC_KEY='S3cr3t_K#Key'
+LAGO_ENCRYPTION_KEY_DERIVATION_SALT='S3cr3t_K#Key'
+LAGO_ENCRYPTION_PRIMARY_KEY='S3cr3t_K#Key'
+LAGO_FRONT_URL=http://100.113.17.49:8080
 LAGO_OAUTH_PROXY_URL=https://proxy.getlago.com
 LAGO_PDF_URL=http://pdf:3000
 LAGO_RAILS_STDOUT=true
@@ -25,6 +25,6 @@ LAGO_SIDEKIQ_WEB=
 LAGO_USE_AWS_S3=false
 LAGO_USE_GCS=false
 
-SECRET_KEY_BASE=your-secret-key-base-hex-64
+SECRET_KEY_BASE='S3cr3t_K#Key'
 
 SENTRY_DSN=
