--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -8,12 +8,13 @@ plugins:
       ref: v0.0.12
       uri: https://github.com/trunk-io/plugins
 lint:
+  disabled:
+    - gitleaks
   enabled:
     - tflint@0.45.0
     - git-diff-check
     - isort@5.12.0
     - flake8@6.0.0
-    - gitleaks@8.16.0
     - taplo@0.7.0
     - markdownlint@0.33.0
     - black@23.1.0
