--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -9,6 +9,7 @@ plugins:
       uri: https://github.com/trunk-io/plugins
 lint:
   disabled:
+    - dotenv-linter
     - gitleaks
   enabled:
     - tflint@0.45.0
@@ -18,7 +19,6 @@ lint:
     - taplo@0.7.0
     - markdownlint@0.33.0
     - black@23.1.0
-    - dotenv-linter@3.3.0
     - oxipng@8.0.0
     - prettier@2.8.4
     - yamllint@1.29.0
