docs(books): last 13 changes

--- a/budibase/.env
+++ b/budibase/.env
@@ -6,8 +6,8 @@ REDIS_PASSWORD=budibase
 COUCHDB_PASSWORD=budibase
 COUCHDB_USER=budibase
 
-INTERNAL_API_KEY=S3cr3t_K#Key
-JWT_SECRET=S3cr3t_K#Key
+INTERNAL_API_KEY=S3cr3t_K@Key
+JWT_SECRET=S3cr3t_K@Key
 
 CLUSTER_PORT=10000
 
