--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
 	"devDependencies": {
 		"@commitlint/config-conventional": "^17.4.2"
 	},
-	"packageManager": "yarn@3.5.1"
+	"packageManager": "yarn@3.5.1",
+	"dependencies": {
+		"serve": "^14.2.1"
+	}
 }
